fix: remove sticky hover styles on mobile; remove error when Press section doesn't exist

--- a/css/about-us-styles.css
+++ b/css/about-us-styles.css
@@ -66,7 +66,6 @@
   height:150px;
   border-radius:50%;
   background-size:cover;
-  /* background-color: currentColor; */
 }
 
 .team-row-name{
@@ -86,21 +85,20 @@
 
 /* avatars */
 #sammyharper-row .team-avatar{
-  background-image:url(../img/team-avatars/sammy-harper-crop.jpg);
+  background-image:url(/img/team-avatars/sammy-harper-crop.jpg);
 }
 #ashleyflorer-row .team-avatar{
-  background-image:url(../img/team-avatars/ashley-florer-crop.jpg);
+  background-image:url(/img/team-avatars/ashley-florer-crop.jpg);
 }
 #pablomorales-row .team-avatar{
-  background-image:url(../img/team-avatars/pablo-morales-crop.jpg);
+  background-image:url(/img/team-avatars/pablo-morales-crop.jpg);
 }
 #mikaylabiggers-row .team-avatar{
-  background-image:url(../img/team-avatars/mikayla-biggers-crop.jpg);
+  background-image:url(/img/team-avatars/mikayla-biggers-crop.jpg);
 }
 
 #wanttobehere-row{
   padding:100px 0;
-  /* margin-bottom:50px; */
 }
 #wanttobehere-row h3{
   margin-bottom:50px;
@@ -118,8 +116,10 @@
   transition:.35s;
   margin-bottom:10px;
 }
-.sdg-container:hover{
-  background-color:#0A8C61;
+@media (hover: hover) and (pointer: fine) {
+  .sdg-container:hover{
+    background-color:#0A8C61;
+  }
 }
 .sdg-container:active{
   background-color:rgba(10, 140, 97,.45);
